# Theory_of_parallelism

./: README.md
Task1_Sin/: CMakeLists.txt  Makefile  SinArray.cpp
